Added More extensive Analysis, Intuitive Visuals, Breakdowns.

--- a/HMM, CRF Experiments/Code/Analysis (Analysis, Notes, Visuals File).ipynb
+++ b/HMM, CRF Experiments/Code/Analysis (Analysis, Notes, Visuals File).ipynb
@@ -74,9 +74,162 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dad287f-bfc6-4a82-a94a-c395451e0006",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff3b025f-7c51-4db5-88ea-f1914ca45fa4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c93f2812-a062-4161-b36d-76e7947c74a2",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## HMM Processing Flow:\n",
+    "\n",
+    "    Raw Sequence → Feature Extraction (PSSM/OneHot) → Forward Pass → Backward Pass → Mixture Responsibilities → State Statistics → Parameter Updates → Predictions\n",
+    "         ↓              ↓                               ↓              ↓                 ↓                        ↓                ↓                ↓\n",
+    "    [MKLLLL...]  [42-dim vectors]                 [α probabilities] [β probabilities] [Component weights]    [State counts]   [New params]    [Final states]\n",
+    "         ↓              ↓                               ↓              ↓                 ↓                        ↓                ↓                ↓\n",
+    "    Preprocessing → Feature Engineering → Likelihood Computation → Posterior Calc → GMM Responsibilities → Balance Check → Update Rules → Viterbi Decode\n",
+    "\n",
+    "\n",
+    "## CRF Processing Flow:\n",
+    "\n",
+    "    Raw Sequence → Enhanced Features → Window Context → Feature Functions → Forward Pass → Backward Pass → Gradient Compute → Parameter Updates → Predictions\n",
+    "         ↓              ↓                  ↓               ↓               ↓              ↓                ↓                ↓                ↓\n",
+    "    [MKLLLL...]  [Base + β-sheet]    [13-pos window]  [22 functions]  [Factor Graph]  [Messages]     [Log-Linear Grad]  [New Weights]  [Final labels]\n",
+    "         ↓              ↓                  ↓               ↓               ↓              ↓                ↓                ↓                ↓\n",
+    "    Preprocessing → Feature Engineering → Context Build → Function Eval → Message Pass → Belief Prop → Gradient Ascent → Weight Update → Decode Labels\n",
+    "\n",
+    "\n",
+    "### Key Differences:\n",
+    "\n",
+    "HMM focuses on generative probabilities and state transitions. HMM uses mixture components for emission modeling. \n",
+    "HMM struggles with long-range dependencies. HMM requires balance enforcement.\n",
+    "\n",
+    "CRF emphasizes discriminative features and gradient-based learning. CRF uses extensive feature functions for pattern capture. \n",
+    "CRF naturally handles arbitrary window contexts. CRF learns balance through feature weights.\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "627a4e1e-b638-4241-a302-1022b78e08f2",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b189cd8-61e9-4707-8458-65cbd64ecac0",
+   "metadata": {},
+   "source": [
+    "\n",
+    "**Generative Models (HMM) - \"How would nature generate this?\"**\n",
+    "- Models the joint probability P(X,Y) - \"how likely am I to see BOTH this sequence AND these structures together?\"\n",
+    "- Learns to understand how to \"generate\" sequences that match each structure\n",
+    "- Like learning to write like Shakespeare by understanding his style and rules\n",
+    "\n",
+    "For proteins, an HMM asks:\n",
+    "```python\n",
+    "P(sequence, structure) = P(structure) * P(sequence|structure)\n",
+    "# \"How likely is this structure AND what amino acids would it create?\"\n",
+    "\n",
+    "# HMM models:\n",
+    "P(AGPSTV, HHHEEC) = P(H->H->H->E->E->C) * P(A|H) * P(G|H) * P(P|H) * P(S|E) * P(T|E) * P(V|C)\n",
+    "```\n",
+    "\n",
+    "**Discriminative Models (CRF) - \"How do I best tell these apart?\"**\n",
+    "- Models conditional probability P(Y|X) directly - \"given this sequence, what structures are most likely?\"\n",
+    "- Learns decision boundaries between different structures. Like a detective who looks at clues to solve a case\n",
+    "\n",
+    "For proteins, a CRF asks:\n",
+    "```python\n",
+    "P(structure|sequence) directly\n",
+    "# \"Given these amino acids, what structure is most likely?\"\n",
+    "\n",
+    "# CRF models:\n",
+    "P(HHHEEC|AGPSTV) = sum of feature weights * feature functions\n",
+    "# Features can look at multiple positions together\n",
+    "```\n",
+    "\n",
+    "**Key Differences in Practice:**\n",
+    "\n",
+    "1. **Feature Handling:**\n",
+    "```python\n",
+    "# HMM (Generative)\n",
+    "def hmm_emission_probability(amino_acid, state):\n",
+    "    # Must model complete probability distribution\n",
+    "    return P(amino_acid | state)  # Must sum to 1 for each state\n",
+    "\n",
+    "# CRF (Discriminative)\n",
+    "def crf_feature_function(sequence, position, state):\n",
+    "    # Can use any helpful features\n",
+    "    return [\n",
+    "        is_hydrophobic(sequence[position]),\n",
+    "        matches_helix_pattern(sequence, position),\n",
+    "        evolutionary_conservation(sequence, position)\n",
+    "    ]\n",
+    "```\n",
+    "\n",
+    "2. **Feature Dependencies:**\n",
+    "```python\n",
+    "# HMM typically assumes feature independence\n",
+    "P(sequence|state) = P(amino_acid1|state) * P(amino_acid2|state) * ...\n",
+    "\n",
+    "# CRF can model complex feature interactions\n",
+    "score = w1*f1(sequence, i) + w2*f2(sequence, i-1, i, i+1) + ...\n",
+    "```\n",
+    "\n",
+    "3. **Training Focus:**\n",
+    "```python\n",
+    "# HMM learns to generate realistic sequences\n",
+    "loss = -log P(sequence, structure)\n",
+    "\n",
+    "# CRF focuses on discriminating between structures\n",
+    "loss = -log P(structure|sequence)\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3a95256-461c-4b49-99d0-742d3dc4acb0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6267b347-e003-4f80-b80d-e287a5af1c03",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c84cec4-5404-4d2b-a625-30a2ea50d947",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb9626b9-19d9-4188-ab2e-3a47ada7d920",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -170,9 +323,7 @@
     "Position 0 (M):\n",
     "```\n",
     "Initial State Probabilities × Emission Probabilities:\n",
-    "H: 0.40 × 0.8 = 0.32  (M favors helix)\n",
-    "E: 0.40 × 0.3 = 0.12  (M doesn't favor sheet)\n",
-    "C: 0.20 × 0.5 = 0.10  (M neutral for coil)\n",
+    "H: 0.40 × 0.8 = 0.32  (M favors helix) ,  E: 0.40 × 0.3 = 0.12  (M doesn't favor sheet) , C: 0.20 × 0.5 = 0.10  (M neutral for coil)\n",
     "```\n",
     "\n",
     "Position 1 (K):\n",
@@ -182,12 +333,9 @@
     "  From E: 0.12 × 0.05 × 0.7 = 0.004  (E→H transition × K in helix)\n",
     "  From C: 0.10 × 0.15 × 0.7 = 0.011  (C→H transition × K in helix)\n",
     "  Total: 0.216\n",
-    "\n",
     "For E(t=1): Similar combinations = 0.048\n",
     "For C(t=1): Similar combinations = 0.082\n",
     "```\n",
-    "\n",
-    "***quick follow up on formulas again.***\n",
     "\n",
     "```\n",
     "This is for position 0:\n",
@@ -195,29 +343,22 @@
     "        - π(state) = Initial state probability\n",
     "        - e(x0|state) = Emission probability (likelihood of seeing amino acid M in that state)\n",
     "\n",
-    "This is for position 1 and later on:\n",
-    "Formula: αt(j) = e(xt|j) × Σi[αt-1(i) × a(i→j)]\n",
-    "\n",
+    "This is for position 1 and later on: Formula: αt(j) = e(xt|j) × Σi[αt-1(i) × a(i→j)]\n",
     "    Where:\n",
     "    - e(xt|j) = Emission probability for current amino acid in state j\n",
     "    - αt-1(i) = Forward probability from previous position for state i\n",
-    "    - a(i→j) = Transition probability from state i to state j\n",
-    "    \n",
+    "    - a(i→j) = Transition probability from state i to state j    \n",
     "    Example for H at t=1: 0.32 × 0.90 × 0.7 = 0.201     [ (prev H prob) × (H→H trans) × (K emission in H) ]\n",
     "```\n",
     "\n",
-    "\n",
     "Position 2 (L) - Strong helix signal emerging:\n",
     "```\n",
-    "H(t=2): 0.445  (Probability increasing - L strongly favors helix)\n",
-    "E(t=2): 0.028  (Decreasing - unlikely to switch to sheet)\n",
-    "C(t=2): 0.051  (Decreasing - pattern supports helix)\n",
+    "H(t=2): 0.445  (Probability increasing - L strongly favors helix),  E(t=2): 0.028  (Decreasing - unlikely to switch to sheet), C(t=2): 0.051  (Decreasing - pattern supports helix)\n",
     "```\n",
     "\n",
     "Positions 3,4 (L,L) - Helix pattern strengthens:\n",
     "```\n",
-    "H(t=3): 0.682  (Very high - strong helix pattern)\n",
-    "H(t=4): 0.791  (Dominant - clear helical region)\n",
+    "H(t=3): 0.682  (Very high - strong helix pattern), H(t=4): 0.791  (Dominant - clear helical region)\n",
     "```\n",
     "\n",
     "\n",
@@ -467,6 +608,121 @@
     "- Physical constraints are encoded in transition probabilities\n",
     "- Amino acid patterns strongly influence structure formation"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55b3194b-f48c-4b59-ba9b-d1609af0de7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81ec44a9-add0-4a4e-bf61-d08666cdaf30",
+   "metadata": {},
+   "source": [
+    "\n",
+    "**Viterbi Algorithm: Finding the Best Path**\n",
+    "```\n",
+    "Sequence:   M    K    L    L    L\n",
+    "Features:  [f1]  [f2]  [f3]  [f4]  [f5]\n",
+    "Position:   0     1     2     3     4\n",
+    "\n",
+    "Key Difference from Forward: Keep BEST path only, not sum of all paths\n",
+    "```\n",
+    "\n",
+    "Position 0 (M):\n",
+    "- Score for each state (like Forward, but separate paths):\n",
+    "  * H: 0.40 × 0.8 = 0.32  (Store: \"Start→H\")\n",
+    "  * E: 0.40 × 0.3 = 0.12  (Store: \"Start→E\")\n",
+    "  * C: 0.20 × 0.5 = 0.10  (Store: \"Start→C\")\n",
+    "\n",
+    "Position 1 (K):\n",
+    "- For H, compare paths:\n",
+    "  * From H: 0.32 × 0.90 × 0.7 = 0.201  (Best!)\n",
+    "  * From E: 0.12 × 0.05 × 0.7 = 0.004\n",
+    "  * From C: 0.10 × 0.15 × 0.7 = 0.011\n",
+    "  * Store: \"Start→H→H\" (Keep best path)\n",
+    "\n",
+    "Final Path Traceback:\n",
+    "```\n",
+    "Score: H   →   H   →   H   →   H   →   H\n",
+    "      0.32    0.201   0.445   0.682   0.791\n",
+    "      ↑       ↑       ↑       ↑       ↑\n",
+    "      Best paths stored at each step\n",
+    "```\n",
+    "\n",
+    "**Baum-Welch (EM for HMM): Learning Parameters**\n",
+    "```\n",
+    "Initial Guess → Improve → Converge\n",
+    "----------------------->\n",
+    "Iteration 1:\n",
+    "  M K L L L  (Sequence)\n",
+    "  ? ? ? ? ?  (States unknown)\n",
+    "```\n",
+    "\n",
+    "E-Step (Estimate State Probabilities):\n",
+    "1. Use current parameters:\n",
+    "   ```\n",
+    "   Position 0 (M):\n",
+    "   P(H) = 0.45  (Using Forward-Backward)\n",
+    "   P(E) = 0.20\n",
+    "   P(C) = 0.35\n",
+    "   ```\n",
+    "\n",
+    "M-Step (Update Parameters):\n",
+    "1. Count state transitions:\n",
+    "   ```\n",
+    "   H→H: Saw 3.2 times (weighted by probabilities)\n",
+    "   H→E: Saw 0.3 times\n",
+    "   ```\n",
+    "2. Update transition matrix:\n",
+    "   ```\n",
+    "   P(H→H) = 3.2/(3.2 + 0.3 + 0.5) = 0.80\n",
+    "   ```\n",
+    "3. Update emission probabilities:\n",
+    "   ```\n",
+    "   P(M|H) = Times M in H/Total H\n",
+    "   ```\n",
+    "\n",
+    "**GMM in HMM: Multiple Patterns Per State**\n",
+    "```\n",
+    "State H (Helix) with 3 components:\n",
+    "      Component 1     Component 2     Component 3\n",
+    "Weight:   0.5           0.3            0.2\n",
+    "Mean:   [Classic]     [Start]        [End]\n",
+    "Cov:    [Tight]      [Medium]       [Loose]\n",
+    "```\n",
+    "\n",
+    "Example for M in Helix:\n",
+    "```\n",
+    "P(M|H) = 0.5 × N(M|μ₁,Σ₁)   // Classic helix\n",
+    "       + 0.3 × N(M|μ₂,Σ₂)   // Helix start\n",
+    "       + 0.2 × N(M|μ₃,Σ₃)   // Helix end\n",
+    "\n",
+    "N() = Gaussian probability\n",
+    "```\n",
+    "\n",
+    "Component Specialization:\n",
+    "```\n",
+    "M K L L L  (Sequence)\n",
+    "↑     \n",
+    "Component 2 (Start) is strongest here\n",
+    "    ↑ ↑ ↑ ↑\n",
+    "    Component 1 (Classic) dominates here\n",
+    "```\n",
+    "\n",
+    "This provides a similar intuitive flow to the forward-backward explanation while capturing the essential mechanics of each algorithm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00861a4d-4d8b-4994-b0e1-e05e4b8e999e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
